syntax = "proto3";

package feature;
option go_package="featurepb";

message Feature {
    string name = 1;
    string topic = 2;
    string user = 3;
    string operation = 4;
    string delta = 5;
    string timestamp = 6;
}

message Document {
    string uuid = 1;
    string name = 2;
    string topic = 3;
    string timestamp = 4;
    string user = 5;
}

message DocumentRequest {
    Document document = 1;
}

message DocumentResponse {
    string result = 1;
}

message FeatureRequest {
    Feature feature = 1;
}

message FeatureResponse {
    string result = 1;
}

message LongFeatureRequest {
    Feature feature = 1;
}

message LongFeatureResponse {
    string status = 1;
}

service FeatureService {

    // Create Document Unary API
    rpc CreateDocument(DocumentRequest) returns (DocumentResponse) {}

    // Unary API
    rpc FeatureUpdates(FeatureRequest)  returns (FeatureResponse) {}


    // Client Streaming
    rpc LongFeatureUpdates(stream LongFeatureRequest) returns (LongFeatureResponse) {}
}